style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");

:root {
  line-height: 1.5;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  /* colors */
  --background: #f4fdff;
  --primary: #2e7acd;
  --secondary: #83b9ff;
  --accent: #d9433f;
}

main {
  min-height: 100vh;
  background-color: var(--background);
  font-family: "Inter", sans-serif;
}

nav {
  display: flex;
  padding: 1rem;
}

nav img {
  margin-left: auto;
}

.hero {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  margin: 0 auto;
  padding-top: 5rem;
  max-width: 1000px;
}

.hero-image {
  height: auto;
  width: 500px;
  object-fit: cover;
}

.hero-desc {
  color: var(--primary);
}

.about-container {
  background-color: var(--primary);
  display: grid;
  place-items: center;
  padding: 2rem;
  color: var(--background);
}

.about-container h1 {
  font-size: clamp(1rem, -1.6563rem + 8.5vw, 3.125rem);
  margin-bottom: 2rem;
}

.about-content {
  width: 100%;
  max-width: 1000px;
}

.about-content dl {
  display: flex;
  border-bottom: 1px solid var(--secondary);
}

.about-content dt {
  width: 10rem;
  position: relative;
}

.about-content dt::after {
  content: "";
  height: 20px;
  width: 1px;
  right: 0;
  bottom: -8px;
  position: absolute;
  background-color: var(--secondary);
}

.about-content dd {
  width: calc(100% - 10rem);
  text-align: center;
}

.about-content dt,
.about-content dd {
  display: table-cell;
  padding: 1rem;
}

.gura-model-container {
  min-height: 100vh;
  display: grid;
  place-items: center;
  padding: 1rem;
  background-color: var(--primary);
}

model-viewer {
  width: 80%;
  height: 80%;
}

.music-swiper-container {
  display: grid;
  place-items: center;
  padding: 1rem;
  background: url("/assets/bg.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.swiper {
  width: 100%;
  height: 100%;
}

.music-swiper-slide {
  display: grid;
  place-items: center;
}

.swiper h2 {
  font-size: clamp(1rem, -1.6563rem + 8.5vw, 3.125rem);
  text-align: center;
}

.swiper-img {
  border-radius: 10px;
  max-height: 500px;
  object-fit: cover;
  cursor: pointer;
  margin: 3rem 0;
}

.divider {
  background: url("/assets/peaks-900x600.svg");
  height: 100%;
  width: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  aspect-ratio: 900 / 600;
}

@media (min-width: 641px) {
  .hero {
    flex-direction: row;
    align-items: center;
  }

  .divider {
    margin-top: -15rem;
  }

  .music-swiper-container {
    min-height: 100vh;
  }
}

@media (min-width: 1281px) {
  .divider {
    margin-top: -30rem;
  }
}

